feat: add sass compiler

--- a/momentum/style.css
+++ b/momentum/style.css
@@ -1,5 +1,6 @@
 * {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   margin: 0;
   padding: 0;
 }
@@ -7,36 +8,63 @@
 body {
   /* font-family: 'Roboto Mono', monospace; */
   font-family: 'Quicksand', sans-serif;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   /* justify-content: flex-start; */
   text-align: center;
   min-height: 100vh;
   color: white;
   text-shadow: 1px 1px 5px black;
-   
   background-size: cover;
   background-position: center center;
+  -webkit-transition: background-image 1s ease-in-out;
   transition: background-image 1s ease-in-out;
 }
 
 .container {
   width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
 }
+
 .main {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 .weather {
-  align-self: flex-end;
+  -ms-flex-item-align: end;
+      align-self: flex-end;
   margin-right: 2%;
   margin-top: 2%;
   /* width: 150px; */
@@ -46,7 +74,6 @@ body {
   top: 20px;
   right: 20px; */
   /* width: 200px; */
-
 }
 
 .temperature {
@@ -58,26 +85,25 @@ body {
   /* line-height: 100%; */
 }
 
-
-
 #time {
   font-family: 'Roboto Mono', monospace;
   /* font-family: 'Courier Prime', monospace; */
   font-size: 8rem;
   /* font-family: 'Monaco'; */
-
 }
 
 #day {
   font-size: 3rem;
   font-weight: 500;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   /* flex-wrap: wrap; */
-  align-self: center;
-
+  -ms-flex-item-align: center;
+      align-self: center;
 }
 
-#name { 
+#name {
   display: inline-block;
   min-width: 20px;
   height: 40px;
@@ -94,29 +120,33 @@ h2 {
 /* #focus {
   max-width: 500px;
 } */
-
 .focus-content {
-  margin-top: 30px; 
+  margin-top: 30px;
 }
 
 .quote {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
   /* max-width: 70%; */
   height: 80px;
   /* margin-top: 40px; */
   font-size: 0.9rem;
   font-weight: 500;
-
 }
 
 /* .quote-text { */
- 
-  /* margin-top : 30px; */
-  /* background: #eee; */
-  /* padding: 1em; */
-  /* border-radius: 1em; */
+/* margin-top : 30px; */
+/* background: #eee; */
+/* padding: 1em; */
+/* border-radius: 1em; */
 /* } */
 /* .quote-text figcaption,
 .quote-text blockquote {
@@ -125,7 +155,6 @@ h2 {
 .quote-text figcaption {
   text-align: right;
 } */
-
 .figcaption {
   text-align: right;
   margin-top: 10px;
@@ -133,10 +162,15 @@ h2 {
 }
 
 .buttons {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   width: 300px;
-  align-self: center;
+  -ms-flex-item-align: center;
+      align-self: center;
   /* position: relative; */
   margin-top: 30px;
   margin-bottom: 15px;
@@ -144,18 +178,16 @@ h2 {
 
 .btn {
   font-family: 'Quicksand', sans-serif;
-
   width: 120px;
   height: 30px;
-
   border: 0;
-  color: rgb(209, 209, 209);
+  color: #d1d1d1;
   background-color: rgba(0, 0, 0, 0.5);
   /* border: 1px solid white; */
   border-radius: 7px;
   /* transition: background-color 0.5s ease-in-out; */
+  -webkit-transition: all 0.5s ease-in-out;
   transition: all 0.5s ease-in-out;
-
   /* background: url("https://www.pngarts.com/files/7/Update-Button-PNG-Image.png"); */
   /* background-size: contain; */
   /* background-repeat: no-repeat; */
@@ -164,6 +196,7 @@ h2 {
 
 .btn:hover {
   /* transition: background-color 0.5s ease-in-out; */
+  -webkit-transition: all 0.5s ease-in-out;
   transition: all 0.5s ease-in-out;
   background-color: gray;
   color: white;
@@ -175,173 +208,148 @@ h2 {
   outline: 0;
 }
 
-.btn:active{
+.btn:active {
   /* transition: all 0.5s ease-in-out;  */
   /* width: 125px; */
   /* height: 33px; */
-  transform: scale(1.1);
-}
-
-
-
-
-
-
-
-.quote-btn {
- 
-  width: 60px;
-  height: 60px;
-  border: 0;
-  background: url("https://www.pngarts.com/files/7/Update-Button-PNG-Image.png");
-  background-size: contain;
-  background-repeat: no-repeat;
-  filter: grayscale(1);
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
 }
 
 .weather-day {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   width: 100%;
 }
 
 .addition {
   max-width: 70%;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  align-self: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-item-align: center;
+      align-self: center;
 }
-
 
 @media (max-width: 1200px) {
-
   .weather-day {
-    flex-direction: row-reverse;
-    justify-content: space-between;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: row-reverse;
+            flex-direction: row-reverse;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
   }
-
-#day {
-  font-size: 1.8rem;
-  display: flex;
-  flex-direction: column;
-  margin-top: 2%;
-  margin-left: 3%;
-  align-self: flex-start;
-  /* position: absolute; */
-
-  /* flex-wrap: wrap; */
-  /* align-self: center; */
-
-}
-
-
-
+  #day {
+    font-size: 1.8rem;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    margin-top: 2%;
+    margin-left: 3%;
+    -ms-flex-item-align: start;
+        align-self: flex-start;
+    /* position: absolute; */
+    /* flex-wrap: wrap; */
+    /* align-self: center; */
+  }
   /* #time { */
-    /* font-size: 6rem; */
+  /* font-size: 6rem; */
   /* } */
-
-
 }
 
 @media (max-width: 768px) {
-
   .weather-day {
-    flex-direction: row-reverse;
-    justify-content: space-between;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: row-reverse;
+            flex-direction: row-reverse;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
   }
-
   .weather {
     height: 140px;
   }
-
   .weather-description, .wind-speed, .humidity {
     font-size: 0.9rem;
   }
-
   h1 {
     font-size: 1.6rem;
   }
-
   h2 {
-    
     font-size: 1.4rem;
   }
-
-
-
   #day {
     font-size: 1.5rem;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
     margin-top: 2%;
     margin-left: 2%;
     /* position: absolute; */
-
     /* flex-wrap: wrap; */
     /* align-self: center; */
-
   }
-
   .temperature {
     font-size: 1rem;
   }
-
   .city {
     font-size: 1rem;
     /* line-height: 100%; */
   }
-
-
-
   /* .quote {
     
     margin-top: 30px;
 
   } */
-
   #time {
     font-size: 6rem;
   }
-
 }
 
 @media (max-width: 500px) {
-
   #day {
     font-size: 1rem;
   }
-  
   #time {
     font-size: 3.6rem;
   }
-
   h1 {
     font-size: 1.2rem;
   }
-
   h2 {
-    
     font-size: 1rem;
   }
-
   .buttons {
-   
     max-width: 280px;
-    align-self: center;
+    -ms-flex-item-align: center;
+        -ms-grid-row-align: center;
+        align-self: center;
     /* position: relative; */
     margin-top: 30px;
     margin-bottom: 15px;
   }
-
-
   .quote {
-    
     height: 130px;
-
   }
-
-
-
-
-}  
-
+}
+/*# sourceMappingURL=style.css.map */
