--- a/virtual-keyboard/style.css
+++ b/virtual-keyboard/style.css
@@ -80,3 +80,12 @@
 .keyboard__key--dark {
   background: rgba(0, 0, 0, 0.25);
 }
+
+.light {
+  animation: changecolor 0.5s ease-out;
+}
+
+@keyframes changecolor {
+  0% {background-color: rgb(75, 209, 164);}
+ 100% {background-color:rgba(255, 255, 255, 0.2);}
+}
