--- a/momentum/style.scss
+++ b/momentum/style.scss
@@ -56,6 +56,12 @@ body {
 .city {
   font-size: 1.5rem;
   /* line-height: 100%; */
+  transition: transform 0.5s ease-out;
+}
+
+.city:hover {
+  cursor: pointer;
+  transform: scale(1.1);
 }
 
 
@@ -77,10 +83,29 @@ body {
 
 }
 
+
+
 #name { 
   display: inline-block;
   min-width: 20px;
   height: 40px;
+  transition: transform 0.5s ease-out;
+}
+
+#name:hover {
+  cursor: pointer;
+  transform: scale(1.05);
+}
+
+
+#focus { 
+
+  transition: transform 0.5s ease-out;
+}
+
+#focus:hover {
+  cursor: pointer;
+  transform: scale(1.05);
 }
 
 h1 {
@@ -106,8 +131,8 @@ h2 {
   /* max-width: 70%; */
   height: 80px;
   /* margin-top: 40px; */
-  font-size: 0.9rem;
-  font-weight: 500;
+  font-size: 1rem;
+  font-weight: 600;
 
 }
 
@@ -306,7 +331,7 @@ h2 {
 
   h2 {
     
-    font-size: 1rem;
+    font-size: 1.2rem;
   }
 
   .buttons {
@@ -320,7 +345,7 @@ h2 {
 
 
   .quote {
-    
+    font-size: 0.9rem;
     height: 130px;
 
   }
