--- a/virtual-keyboard/style.css
+++ b/virtual-keyboard/style.css
@@ -62,7 +62,7 @@
   max-width: 500px;
 }
 
-.keyboard__key--activatable::after {
+/* .keyboard__key--activatable::after {
   content: '';
   top: 10px;
   right: 10px;
@@ -71,10 +71,14 @@
   height: 8px;
   background: rgba(0, 0, 0, 0.4);
   border-radius: 50%;
-}
+} */
 
-.keyboard__key--active::after {
+/* .keyboard__key--active::after {
   background: #08ff00;
+} */
+
+.keyboard__key--active {
+  border: 2px solid  #08ff00;
 }
 
 .keyboard__key--dark {
@@ -88,4 +92,10 @@
 @keyframes changecolor {
   0% {background-color: rgb(75, 209, 164);}
  100% {background-color:rgba(255, 255, 255, 0.2);}
+}
+
+@media (max-width: 600px) {
+  .keyboard__key {
+    font-size: 1rem;
+  }
 }
