--- a/virtual-keyboard/style.css
+++ b/virtual-keyboard/style.css
@@ -1,12 +1,18 @@
+
+
 .use-keyboard-input {
   display: block;
   width: 90%;
   margin: 30px auto;
   padding: 10px;
   font-size: 20px;
-  height: calc(100vh - 380px);
-  min-height: 300px;
+  height: calc(100vh - 350px);
+  min-height: 350px;
+  border: 1px solid black;
 }
+
+
+
 
 .keyboard {
   position: fixed;
@@ -14,7 +20,8 @@
   bottom: 0;
   width: 100%;
   padding: 5px 0;
-  background: #004134;
+  /* background: #004134; */
+  background: rgb(51,49,49);
   box-shadow: 0 0 50px rgba(0, 0, 0, 0.5);
   user-select: none;
   transition: bottom 0.4s;
@@ -29,15 +36,23 @@
 }
 
 .keyboard__key {
-  height: 45px;
-  width: 6%;
+  box-sizing: border-box;
+  height: 50px;
+  width: 7%;
   max-width: 90px;
-  margin: 3px;
-  border-radius: 4px;
-  border: none;
+  /* margin: 3px; */
+  border-radius: 10px;
+  border: 3px solid rgb(51,49,49);
+  
   background: rgba(255, 255, 255, 0.2);
+  background: rgb(219, 144, 46);
+  background: rgb(252, 45, 193);
+  background: rgb(237, 114, 47);
   color: #ffffff;
-  font-size: 1.05rem;
+  /* color: rgb(77, 73, 67); */
+  color: rgb(69, 66, 66);
+  font-weight: 500;
+  font-size: 1.2rem;
   outline: none;
   cursor: pointer;
   display: inline-flex;
@@ -47,6 +62,7 @@
   padding: 0;
   -webkit-tap-highlight-color: transparent;
   position: relative;
+  /* margin-bottom: 2px; */
 }
 
 .keyboard__key:active {
@@ -54,13 +70,19 @@
 }
 
 .keyboard__key--wide {
-  width: 12%;
+  width: 14%;
 }
 
 .keyboard__key--extra-wide {
-  width: 36%;
+  width: 35%;
   max-width: 500px;
 }
+
+
+/* .keyboard__key--extra-wide {
+  width: 39%;
+  max-width: 600px;
+} */
 
 /* .keyboard__key--activatable::after {
   content: '';
@@ -78,24 +100,25 @@
 } */
 
 .keyboard__key--active {
-  border: 2px solid  #08ff00;
+  border: 2px solid   rgb(245, 186, 49);
 }
 
 .keyboard__key--dark {
-  background: rgba(0, 0, 0, 0.25);
+  background: rgba(255, 255, 255, 0.25);
 }
 
 .light {
-  animation: changecolor 0.5s ease-out;
+  animation: changecolor 0.7s ease-out;
 }
 
 @keyframes changecolor {
-  0% {background-color: rgb(75, 209, 164);}
- 100% {background-color:rgba(255, 255, 255, 0.2);}
+  0% {background-color: rgb(245, 186, 49);}
+ 100% {background-color:rgb(237, 114, 47);}
 }
 
-@media (max-width: 600px) {
+@media (max-width: 700px) {
   .keyboard__key {
     font-size: 1rem;
+    border-radius: 5px;
   }
 }
