--- a/gem-puzzle/css/style.css
+++ b/gem-puzzle/css/style.css
@@ -57,6 +57,9 @@ body {
   margin: 0 auto;
   margin-top: 20px;
   position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .puzzle-box {
@@ -65,6 +68,7 @@ body {
   display: flex;
   flex-wrap: wrap;
   position: absolute;
+  /* position: relative; */
 }
 
 .blackout-show {
@@ -79,12 +83,54 @@ body {
   display: none;
 }
 
+.settings-show, .pause-show, .records-show {
+  /* margin: 0 auto; */
+  /* top: 30px; */
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  position: absolute;
+  color: white;
+  z-index: 7;
+}
+
+.settings-hide, .pause-hide, .congrat-hide, .records-hide {
+  display: none;
+}
+
+.field-size {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.congrat-show {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  background-color: teal;
+  font-size: 25px;
+  color: red;
+  text-align: center; 
+  position: absolute;
+  z-index: 7;
+}
+
+.records-show {
+  justify-content: center;
+}
 
 
 .chip {
+  /* position: absolute; */
   position: relative;
-  width: 25%;
-  height: 25%;
+  /* width: 25%; */
+  /* height: 25%; */
   border: 2px solid aquamarine;
   background-color: beige;
   color: black;
@@ -95,30 +141,31 @@ body {
 }
 
 .empty {
+  /* position: absolute; */
   position: relative;
-  width: 25%;
-  height: 25%;
+  /* width: 25%; */
+  /* height: 25%; */
   background-color:aquamarine;
   z-index: -1;
 }
 
 .to-top {
-  transition: transform 1s ease-out;
+  transition: transform 0.5s ease-out;
   transform: translateY(-100%);
 }
 
 .to-bottom {
-  transition: transform 1s ease-out;
+  transition: transform 0.5s ease-out;
   transform: translateY(100%);
 }
 
 .to-left {
-  transition: transform 1s ease-out;
+  transition: transform 0.5s ease-out;
   transform: translateX(-100%);
 }
 
 .to-right {
-  transition: transform 1s ease-out;
+  transition: transform 0.5s ease-out;
   transform: translateX(100%);
 }
 
