--- a/gem-puzzle/css/style.css
+++ b/gem-puzzle/css/style.css
@@ -132,8 +132,8 @@ body {
   /* width: 25%; */
   /* height: 25%; */
   border: 2px solid aquamarine;
-  background-color: beige;
-  color: black;
+  /* background-color: beige; */
+  color: white;
   font-size: 24px;
   display: flex;
   justify-content: center;
@@ -145,7 +145,8 @@ body {
   /* position: relative; */
   /* width: 25%; */
   /* height: 25%; */
-  background-color:aquamarine;
+  /* background-color:aquamarine; */
+  border: 2px solid aquamarine;
   z-index: -1;
 }
 
