--- a/gem-puzzle/css/style.css
+++ b/gem-puzzle/css/style.css
@@ -10,34 +10,36 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-
 }
 
 .wrapper {
-  /* margin: 0 auto; */
-  /* width: 420px; */
-  /* height: 420px; */
   border: 2px solid black;
   padding: 20px;
 }
 
+.nav-wrapper {
+  display: flex;
+  flex-direction: column;
+}
 
 .menu {
-  /* padding-left: 10px; */
-  /* padding-right: 10px; */
   width: 100%;
   display: flex;
   justify-content: space-between;
   list-style-type: none;
 }
 
+.menu-item:hover {
+  color: black;
+}
+
 .menu-item {
-  font-size: 16px;  
+  font-size: 16px;
+  color: gray;
+  cursor: pointer;  
 }
 
 .current {
-  /* padding-left: 10px; */
-  /* padding-right: 10px; */
   width: 100%;
   display: flex;
   justify-content: space-between;
@@ -45,15 +47,14 @@ body {
   margin-top: 20px;
 }
 
-.moves {
-  width: 100px;
+.pause, div > i {
+  cursor: pointer;
 }
 
 .container {
   width: 400px;
   height: 400px;
-  border: 1px solid red;
-  background-color: aquamarine;
+  background-color:rgb(230,230,230);
   margin: 0 auto;
   margin-top: 20px;
   position: relative;
@@ -67,7 +68,6 @@ body {
   height: 100%;
   display: flex;
   flex-wrap: wrap;
-  /* position: absolute; */
   position: relative;
 }
 
@@ -77,6 +77,7 @@ body {
   position: absolute;
   background-color: black;
   z-index: 5;
+  cursor: pointer;
 }
 
 .blackout-hide{
@@ -84,8 +85,6 @@ body {
 }
 
 .settings-show, .pause-show, .records-show {
-  /* margin: 0 auto; */
-  /* top: 30px; */
   width: 100%;
   height: 100%;
   display: flex;
@@ -95,6 +94,7 @@ body {
   position: absolute;
   color: white;
   z-index: 7;
+  background-color: black;
 }
 
 .settings-hide, .pause-hide, .congrat-hide, .records-hide {
@@ -113,42 +113,35 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  background-color: teal;
   font-size: 25px;
-  color: red;
+  color: #FF3333;
+  text-shadow: 1px 1px 5px black;
   text-align: center; 
   position: absolute;
   z-index: 7;
 }
 
-.records-show {
-  justify-content: center;
-}
-
-
 .chip {
   position: absolute;
-  /* position: relative; */
-  /* width: 25%; */
-  /* height: 25%; */
-  border: 2px solid aquamarine;
-  /* background-color: beige; */
-  color: white;
-  font-size: 24px;
+  border: 2px solid rgb(230,230,230);
+  color: transparent;
+  font-size: 30px;
   display: flex;
   justify-content: center;
   align-items: center;
+  cursor: pointer;
 }
 
 .empty {
   position: absolute;
-  /* position: relative; */
-  /* width: 25%; */
-  /* height: 25%; */
-  /* background-color:aquamarine; */
-  border: 2px solid aquamarine;
+  border: 2px solid rgb(230,230,230);
   z-index: -1;
 }
+
+#saveGameBtn, #back1, #back2, #back3 {
+  cursor: pointer;
+}
+
 
 .to-top {
   transition: transform 0.5s ease-out;
@@ -168,5 +161,53 @@ body {
 .to-right {
   transition: transform 0.5s ease-out;
   transform: translateX(100%);
+}
+
+
+
+@media (max-width: 500px) {
+
+  .wrapper {
+    border: 2px solid black;
+    padding: 10px;
+  }
+
+  .container {
+    width: 300px;
+    height: 300px;
+  }
+
+  .menu {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+  
+  }
+
+  .menu-item {
+    padding-bottom: 20px; 
+  }
+
+
+  .current {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    margin-top: 0;
+  }
+  
+  .current div {
+    /* padding-bottom: 20px;  */
+    text-align: right;
+  }
+
+  .nav-wrapper {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+
+
 }
 
