--- a/gem-puzzle/src/css/style.css
+++ b/gem-puzzle/src/css/style.css
@@ -1,16 +1,16 @@
 * {
+  box-sizing: border-box;
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
 }
 
 body {
-  height: 100vh;
-  font-family: Arial;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  height: 100vh;
+  font-family: Arial;
 }
 
 .notes {
@@ -19,8 +19,8 @@ body {
 }
 
 .wrapper {
-  border: 2px solid black;
   padding: 20px;
+  border: 2px solid rgb(0, 0, 0);
 }
 
 .nav-wrapper {
@@ -29,81 +29,87 @@ body {
 }
 
 .menu {
-  width: 100%;
   display: flex;
   justify-content: space-between;
+  width: 100%;
   list-style-type: none;
 }
 
 .menu-item:hover {
-  color: black;
+  color: rgb(0, 0, 0);
 }
 
 .menu-item {
   font-size: 16px;
-  color: gray;
-  cursor: pointer;  
+  color: rgb(99, 97, 97);
+  cursor: pointer;
 }
 
 .current {
-  width: 100%;
   display: flex;
   justify-content: space-between;
-  font-size: 18px; 
+  width: 100%;
   margin-top: 20px;
+  font-size: 18px;
 }
 
-.pause, div > i {
+.pause,
+.menu-item {
   cursor: pointer;
 }
 
 .container {
-  width: 400px;
-  height: 400px;
-  background-color: rgb(127,127,127);
-  margin: 0 auto;
-  margin-top: 20px;
   position: relative;
   display: flex;
-  align-items: center;
   justify-content: center;
+  align-items: center;
+  width: 400px;
+  height: 400px;
+  margin: 0 auto;
+  margin-top: 20px;
+  background-color: rgb(127,127,127);
 }
 
 .puzzle-box {
-  width: 100%;
-  height: 100%;
+  position: relative;
   display: flex;
   flex-wrap: wrap;
-  position: relative;
+  width: 100%;
+  height: 100%;
 }
 
 .blackout-show {
+  position: absolute;
+  z-index: 1;
   width: 100%;
   height: 100%;
-  position: absolute;
-  background-color: black;
-  z-index: 5;
+  background-color: rgb(0, 0, 0);
   cursor: pointer;
 }
 
-.blackout-hide{
+.blackout-hide {
   display: none;
 }
 
-.settings-show, .pause-show, .records-show {
-  width: 100%;
-  height: 100%;
+.settings-show,
+.pause-show,
+.records-show {
+  position: absolute;
+  z-index: 2;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
-  position: absolute;
-  color: white;
-  z-index: 7;
-  background-color: black;
+  width: 100%;
+  height: 100%;
+  color: rgb(255, 255, 255);
+  background-color: rgb(0, 0, 0);
 }
 
-.settings-hide, .pause-hide, .congrat-hide, .records-hide {
+.settings-hide,
+.pause-hide,
+.congrat-hide,
+.records-hide {
   display: none;
 }
 
@@ -114,77 +120,82 @@ body {
 }
 
 .congrat-show {
-  width: 100%;
-  height: 100%;
+  position: absolute;
+  z-index: 2;
   display: flex;
   flex-direction: column;
   justify-content: center;
+  width: 100%;
+  height: 100%;
   font-size: 25px;
-  color: #FF3333;
+  text-align: center;
+  color: rgb(255, 51, 51);
   text-shadow: 1px 1px 5px black;
-  text-align: center; 
-  position: absolute;
-  z-index: 7;
 }
 
 .chip {
   position: absolute;
-  border: 2px solid rgb(127,127,127);
-  color: transparent;
-  font-size: 30px;
   display: flex;
   justify-content: center;
   align-items: center;
+  font-size: 0;
+  color: rgb(255, 255, 255);
+  text-shadow: 1px 1px 5px rgb(0, 0, 0);
+  border: 2px solid rgb(127,127,127);
   cursor: pointer;
 }
 
 .empty {
   position: absolute;
   border: 2px solid rgb(127,127,127);
-  z-index: -1;
 }
 
-#saveGameBtn, #back1, #back2, #back3, #start {
+#saveGameBtn,
+#back1,
+#back2,
+#back3,
+#start {
   cursor: pointer;
 }
 
-#saveGameBtn:hover, #back1:hover, #back2:hover, #back3:hover, #start:hover {
-  /* font-weight: 600; */
+#saveGameBtn:hover,
+#back1:hover,
+#back2:hover,
+#back3:hover,
+#start:hover {
   text-decoration: underline;
 }
 
-
 .to-top {
-  transition: transform 0.3s ease-out;
   transform: translateY(-100%);
+  transition: transform 0.3s ease-out;
 }
 
 .to-bottom {
-  transition: transform 0.3s ease-out;
   transform: translateY(100%);
+  transition: transform 0.3s ease-out;
 }
 
 .to-left {
-  transition: transform 0.3s ease-out;
   transform: translateX(-100%);
+  transition: transform 0.3s ease-out;
 }
 
 .to-right {
-  transition: transform 0.3s ease-out;
   transform: translateX(100%);
+  transition: transform 0.3s ease-out;
 }
 
 @media (max-width: 500px) {
-
   .notes {
-    font-size: 14px;
     width: 300px;
     margin: 0 auto;
-  }  
+    font-size: 14px;
+  }
 
   .wrapper {
-    border: 2px solid black;
     padding: 10px;
+    border: 2px solid rgb(0, 0, 0);
   }
 
   .container {
@@ -193,23 +204,23 @@ body {
   }
 
   .menu {
-    width: 50%;
     display: flex;
     flex-direction: column;
-    justify-content: flex-start; 
+    justify-content: flex-start;
+    width: 50%;
   }
 
   .menu-item {
-    padding-bottom: 20px; 
+    padding-bottom: 20px;
   }
 
   .current {
-    width: 50%;
     display: flex;
     flex-direction: column;
+    width: 50%;
     margin-top: 0;
   }
-  
+
   .current div {
     text-align: right;
   }
@@ -219,9 +230,4 @@ body {
     flex-direction: row;
     justify-content: space-between;
   }
-
-  .chip {
-    font-size: 20px;  
-  }
 }
-
