--- a/english-for-kids/src/scss/main.scss
+++ b/english-for-kids/src/scss/main.scss
@@ -212,6 +212,7 @@
             // background-color: white;
             backface-visibility: hidden;
             // transition: 1s;
+            transition: transform 0.5s ease-out;
 
 
 
@@ -244,6 +245,11 @@
           .card-box-back {
             // background-color: red;
             transform: rotateY(180deg);
+          }
+
+          .card-box-front:hover {
+            // background-color: red;
+            transform: scale(0.95);
           }
         }
 
