--- a/english-for-kids/src/scss/main.scss
+++ b/english-for-kids/src/scss/main.scss
@@ -6,6 +6,7 @@ $color-c: #fffcad;
 $color-d: #ffffff;
 $color-e: #000000;
 $color-f: #42d4f5;
+$color-g: #56db89;
 
 @font-face {
   font-style: normal;
@@ -313,7 +314,6 @@ $color-f: #42d4f5;
           align-self: center;
           width: 100%;
           height: 35px;
-          // margin-top: 20px;
           margin-right: 30px;
           margin-left: 30px;
           overflow: hidden;
@@ -482,28 +482,47 @@ $color-f: #42d4f5;
       flex-direction: column;
       align-items: center;
       width: 100%;
-      // align-self: center;
-      // max-width: 1200px;
       min-width: 650px;
       overflow-x: auto;
       font-size: 16px;
       font-family: $font-main;
       color: $color-d;
 
+      .stat-buttons {
+        display: flex;
+        justify-content: space-between;
+        width: 250px;
+        margin-bottom: 10px;
+
+        .stat-repeat,
+        .stat-reset {
+          height: 40px;
+          padding-top: 10px;
+          padding-right: 10px;
+          padding-left: 10px;
+          font-size: 16px;
+          font-family: $font-main;
+          color: $color-d;
+          background-color: $color-b;
+          border-radius: 5px;
+          transition: background-color 0.5s ease-out;
+        }
+
+        .stat-repeat:hover,
+        .stat-reset:hover {
+          background-color: $color-g;
+          cursor: pointer;
+        }
+      }
+
       .stat-table {
         display: block;
-        // width: 650px;
         min-width: 650px;
         overflow: auto;
-        // margin: 0 auto;
         border-collapse: collapse;
         line-height: 2rem;
         background-color: $color-a;
         border-radius: 5px;
-
-        tr {
-          min-width: 650px;
-        }
 
         .td-category,
         .td-word,
@@ -517,12 +536,6 @@ $color-f: #42d4f5;
         .td-percent {
           text-align: center;
         }
-
-
-
-        // .stat-table th {
-        //   width: 170px;
-        // }
       }
       .stat-table th {
         width: 170px;
